# DeepThink-by-Vinayak

./: .gitignore  AGENTS.md  DATA_SOURCES.md  Detailed_Implementation_Plan.md  Expected_Outcome.md  Makefile  Model_Answers_50.md  OverallPlan.md  README.md  Sample_Answers.md  Technical_Spec.md  Time_Estimates.md  pyproject.toml  requirements.txt
app/: __init__.py  playground.py
configs/: __init__.py  constitution.md  corpus.yaml  persona_system_prompt.txt  small.yaml  source_registry.yaml  tiny.yaml  topic_registry.yaml
data/: __init__.py
datasets/: __init__.py  chunking.py  cleaning.py  collate.py  dataset.py  masking.py  packing.py  shakespeare.py  shards.py
docs/: __init__.py  corpus_audit.md  general_pretraining_small.md  phase8_next_steps.md  tiny_shakespeare_training.md
evaluation/: __init__.py  factual_probes.py
experiments/: __init__.py
inference/: __init__.py  generate.py  kvcache.py  loader.py  sampler.py
logs/: __init__.py
model/: __init__.py  attention.py  block.py  config.py  embeddings.py  gpt.py  kv_cache.py  rmsnorm.py  rope.py  swiglu.py
models/: __init__.py
phases/: 00_INDEX.md  01_phase1_project_setup.md  02_phase2_tokenizer.md  03_phase3_dataset_pipeline.md  04_phase4_gpt_architecture.md  05_phase5_training_framework.md  06_phase6_text_generation.md  07_phase7_tiny_gpt_shakespeare.md  08_phase8_general_pretraining.md  09_phase9_philosophy_dataset.md  10_phase10_domain_adaptation.md  11_phaseR_reasoning_cot.md  12_phase11_instruction_dataset.md  13_phaseV_constitution_persona_sft.md  14_phaseP_preference_dpo.md  15_phaseC_calibration_abstention.md  16_phase12_evaluation_suite.md  17_phase13_inference_api.md  18_phase14_chat_app.md  19_phase15_experiment_tracking.md  20_phase16_testing.md  21_phase17_documentation.md
scripts/: __init__.py  generate.py  prepare_general.py  score_factual_probes.py  train.py
tests/: __init__.py  test_corpus.py  test_dataset.py  test_factual_probes.py  test_general_corpus.py  test_generation.py  test_model.py  test_smoke.py  test_tokenizer.py  test_training.py
tokenizer/: __init__.py  dataset.py  decoder.py  encoder.py  serialization.py  tokenizer.py  trainer.py  vocab.py
(+23 files in other folders)
